docs: update demo workflow doc

--- a/matflow/data/workflows/sample_orientations_CTF_file.yaml
+++ b/matflow/data/workflows/sample_orientations_CTF_file.yaml
@@ -1,8 +1,11 @@
 doc:
   - >
-    Demonstration of a task to sample texture from a CTF file using MTEX, and produce
-    pole figures of the sampled orientations.
-
+    Demonstration of a task to sample a subset of orientations from a CTF file using MTEX,
+    and produce pole figures of the sampled orientations.
+  - >
+    Note that `sample_orientations` schemas pick a random subset of orientations from the
+    EBSD data, whereas the `sample_texture` schemas first construct an orientation
+    distribution function (ODF), from which orientations are then sampled.
 tasks:
   - schema: sample_orientations_from_CTF_file_mtex
     inputs:
